--- a/index.html
+++ b/index.html
@@ -2,9 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <title>Les Ondées Festival</title>
+      <!-- Basic Meta Tags -->
+    <meta name="description" content="Les Ondées revient au Cargö les 23-24 mai 2025 ! 2 jours d’animations, découvertes et concerts après 3 éditions à succès.">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Les Ondées, le festival étudiant pour tous revient">
+    <meta property="og:locale" content="fr_FR">
+    <meta property="og:description" content="Les Ondées revient au Cargö les 23-24 mai 2025 ! 2 jours d’animations, découvertes et concerts après 3 éditions à succès.">
+    <meta property="og:image" content="https://lesondees.fr/logo.png">
+    <meta property="og:url" content="https://lesondees.fr">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Les Ondées Festival">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Les Ondées, le festival étudiant pour tous revient">
+    <meta name="twitter:description" content="Les Ondées revient au Cargö les 23-24 mai 2025 ! 2 jours d’animations, découvertes et concerts après 3 éditions à succès.">
+    <meta name="twitter:image" content="https://lesondees.fr/logo.png">
+    
+    <!-- Additional Meta Tags -->
+    <link rel="canonical" href="https://lesondees.fr/">
+
+    <meta name="keywords" content="Les Ondées, Festival, Theodora, Ajna, Danyl, Caen, événement, cargo, musique, village culturel, rap, festival, festival 2025">
+    <meta name="author" content="Baptiste Laisney">
+
   </head>
   <body>
     <div id="app"></div>
