--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
     <meta name="author" content="Baptiste Laisney">
 
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RKR7QXH9PV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-RKR7QXH9PV');
+  </script>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
